codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__app_server_collab_spawn_completed_renders_requested_model_and_effort.snap
---
source: tui/src/chatwidget/tests.rs
expression: combined
---
• Spawning · primitive: spawn_agent (requested: gpt-5 high)
  └ Explore the repo


• Spawned · primitive: spawn_agent · 019cff70 (gpt-5 high)
  └ Explore the repo
