codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__app_server_collab_wait_items_render_history.snap
---
source: tui/src/chatwidget/tests/app_server.rs
expression: combined
---
• Waiting on · primitive: wait_agent · Robie [explorer], Ada [reviewer]
  └ Robie [explorer]
    Ada [reviewer]


• Wake cause unavailable
  └ Robie [explorer]: Completed - Done
    Ada [reviewer]: Running
    Still pending: Ada [reviewer]
